# LLVM_Opt_ml

./: .gitignore  CMakeLists.txt  HOW_TO_TEST.md  INSTALL.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SIMPLE_README.md  START_HERE.md  build.bat  build.sh  ideasNext.txt  package.json  quick_test.bat  quick_test.sh  requirements.txt  verify_project.sh
demo/: simple_test.cpp
docs/: API.md  QUICKSTART.md
examples/: CMakeLists.txt  cli_tool.cpp  simple_example.cpp
include/ai_debugger/: AIDebugger.h  CallGraphAnalyzer.h  Config.h  ErrorCodes.h  ExplanationGenerator.h  FixSuggester.h  RootCausePredictor.h  StackTraceParser.h  TestGenerator.h  Version.h
src/: AIDebugger.cpp  CallGraphAnalyzer.cpp  Config.cpp  ErrorCodes.cpp  ExplanationGenerator.cpp  FixSuggester.cpp  RootCausePredictor.cpp  StackTraceParser.cpp  TestGenerator.cpp  Version.cpp
tests/: CMakeLists.txt  test_call_graph_analyzer.cpp  test_explanation_generator.cpp  test_fix_suggester.cpp  test_integration.cpp  test_root_cause_predictor.cpp  test_stack_trace_parser.cpp  test_test_generator.cpp
